tooltip position changed

--- a/app/lib/eg/index.html
+++ b/app/lib/eg/index.html
@@ -41,8 +41,8 @@ a {
   <a class="btn" href="javascript:void(0);" onclick="get_selection();">Get Selection</a>
   <a class="btn" href="javascript:void(0);" onclick="clear_selection();">Clear Selection</a>
   <div class="test"></div>
-  <!-- // <script src="d3.v3.min.js"></script> -->
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+   // <script src="../d3.v3.min.js"></script>
+  <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
   <script>
   var margin = {top: 20, right: 20, bottom: 30, left: 40},
   width = 800 - margin.left - margin.right,
