--- a/app/lib/eg/MultiLineChart_D3.html
+++ b/app/lib/eg/MultiLineChart_D3.html
@@ -146,10 +146,10 @@
                     .attr('class','brush')
                     .call(brush);
 
-//                var brush1 = d3.svg.brush()
-//                    .x(xAxis)
-//                    .y(yAxis)
-//                    .extent([5,5])
+                var brush1 = d3.svg.brush()
+                    .x(xAxis)
+                    .y(yAxis)
+                    .extent([5,5])
 
             }
             InitChart();
